style.css
* {
    box-sizing: border-box;
}

body {
    font-family: "Roboto", sans-serif;
    margin: 0;
}

.first, .fourth {
    background-color: #1F2937;
    color: white;
    padding: 0px 5em 2em;
}

.first {
    display: flex;
    flex-direction: column;
}

.second {
    background-color: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 50px 0;
    border: 5px dotted black;
}

.header {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.hero {
    display: flex;
    align-items: center;
    padding: 4em 0;
}

.hero-text, .hero-img {
    flex: 1;
    align-self: stretch;
}

.hero-text {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 0.5em;
}

.hero-img {
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.hero-text button {
    align-self: flex-start;
    margin-top: 1em;
    background: #3882f6;
    color: white;
    border-style: none;
    border-radius: 0.5em;
    padding: 1em 1.5em;
}

.hero-img img {
    height: 100%;
}

.hero h1 {
    font-size: 48px;
    font-weight: bolder;
    margin: 0;
}

.hero p {
    margin: 0;
}

.header h3 {
    font-size: 24px;
}

.header-links {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    gap: 1em;
    font-size: 18px;
    color: #E5E7EB;
}

a {
    text-decoration: none;
}

a:link {
    color: white;
}

.second h3 {
    margin: 0;
    font-size: 36px;
    font-weight: bolder;
    color: #1F2937;
    margin-bottom: 50px;
}

.second .img-card-master {
    display: flex;
    gap: 50px;
}

.img-card {
    width: 200px;
    display: flex;
    flex-flow: row wrap;
    text-align: center;
    gap: 10px;
}

.card, .img-card p {
    flex-basis: 100%;
}

.card {
    border: 3px solid #3882f6;
    border-radius: 20px;
    height: 200px;
}

.img-card p {
    margin: 0;
}

